[package]
name = "bevy-cubes-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
avian3d = { git = "https://github.com/Jondolf/avian.git", rev = "52cbcecce0fd05a65005ab6935ebeb231373c2c6" }
rand = "0.8.5"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
